--- a/code/app/andriod/Laundry/res/layout/misp_text_edit.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_text_edit.xml
@@ -16,7 +16,7 @@
         android:padding="20dp" >
 
         <EditText
-            android:id="@+id/edd"
+            android:id="@+id/misp_text_edit_txt"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:background="@drawable/edittext_sel"
