--- a/code/app/andriod/Laundry/res/layout/cart_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/cart_fragment.xml
@@ -44,7 +44,7 @@
             android:background="@color/black" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/popwindow_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
