--- a/code/app/andriod/Laundry/res/layout/home_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/home_fragment.xml
@@ -15,7 +15,7 @@
          android:orientation="vertical" >
  
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/popwindow_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="快客洗涤"
