--- a/code/app/andriod/Laundry/res/layout/misp_pop_list_window.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_pop_list_window.xml
@@ -2,21 +2,42 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_marginTop="2dp"
-    android:orientation="vertical"
-    android:background="@color/white" >
+    android:layout_margin="50dp"
+    android:background="@color/backcolor"
+    android:orientation="vertical" >
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/themecolor"
+        android:paddingBottom="1dp" >
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="@color/white"
+            android:padding="10dp" >
+            <TextView
+                android:id="@+id/pop_window_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Title"
+                android:textColor="@color/themecolor"
+                android:textSize="16sp" />
+        
+        </RelativeLayout>
+        
+    </RelativeLayout>
+        
         <ListView
             android:id="@+id/misp_pop_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:divider="@null"
-            android:dividerHeight="1dp"
             android:footerDividersEnabled="true"
             android:headerDividersEnabled="true" >
-
         </ListView>
-
+        
 </LinearLayout>
  
