--- a/code/app/andriod/Laundry/res/layout/pop_window_num.xml
+++ b/code/app/andriod/Laundry/res/layout/pop_window_num.xml
@@ -11,7 +11,7 @@
         android:background="@color/white" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/popwindow_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
