--- a/code/app/andriod/Laundry/res/values/color.xml
+++ b/code/app/andriod/Laundry/res/values/color.xml
@@ -2,6 +2,7 @@
 <resources>
 	<color name="white">#FFFFFF</color><!--白色 -->
 	<color name="black">#000000</color><!-- 黑色 -->
+	<color name="lightblack">#CC000000</color><!-- 黑色 -->
 	<color name="ivory">#FFFFF0</color><!--象牙色 -->
 	<color name="lightyellow">#FFFFE0</color><!--亮黄色 -->
 	<color name="yellow">#FFFF00</color><!--黄色 -->
