--- a/code/app/andriod/Laundry/res/layout/misp_pop_list_window.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_pop_list_window.xml
@@ -16,15 +16,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:background="@color/white"
+            android:background="@color/themecolor"
             android:padding="10dp" >
+
             <TextView
                 android:id="@+id/pop_window_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Title"
-                android:textColor="@color/themecolor"
-                android:textSize="16sp" />
+                android:textColor="@color/white"
+                android:textSize="18dp" />
         
         </RelativeLayout>
         
