--- a/code/app/andriod/Laundry/res/layout/order_confirm.xml
+++ b/code/app/andriod/Laundry/res/layout/order_confirm.xml
@@ -22,7 +22,7 @@
 
             <ImageView
                 android:id="@+id/imageView1"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:src="@drawable/basketlogo" />
