--- a/code/app/andriod/Laundry/res/layout/user_info_edit.xml
+++ b/code/app/andriod/Laundry/res/layout/user_info_edit.xml
@@ -24,100 +24,181 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp" >
 
                 <TextView
                     android:id="@+id/textView2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/user_user_name" />
+                    android:gravity="center"
+                    android:text="@string/user_user_name"
+                    android:textColor="@color/black"
+                    android:textSize="14dp" />
 
                 <EditText
                     android:id="@+id/user_user_name_text"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10" />
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_sel"
+                    android:hint="真实姓名"
+                    android:paddingLeft="20dp"
+                    android:textSize="14dp" />
+
             </LinearLayout>
 
-            <LinearLayout
+
+              <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp" >
 
                 <TextView
-                    android:id="@+id/textView1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/user_user_sex" />
+                    android:gravity="center"
+                    android:text="@string/user_user_sex"
+                    android:textColor="@color/black"
+                    android:textSize="14dp" />
 
                 <EditText
                     android:id="@+id/user_user_sex_text"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10" >
-
-                    <requestFocus />
-                </EditText>
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_sel"
+                    android:hint="性别"
+                    android:paddingLeft="20dp"
+                    android:textSize="14dp" />
 
             </LinearLayout>
+            
+              
 
-            <LinearLayout
+          <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp" >
 
                 <TextView
-                    android:id="@+id/textVew2"
-                    android:layout_width="wrap_content"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/user_user_birthday" />
+                    android:gravity="center"
+                    android:text="@string/user_user_birthday"
+                    android:textColor="@color/black"
+                    android:textSize="14dp" />
 
                 <EditText
                     android:id="@+id/user_user_birthday_text"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="date" />
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_sel"
+                    android:hint="生日"
+                    android:paddingLeft="20dp"
+                    android:textSize="14dp" />
 
             </LinearLayout>
-
-            <LinearLayout
+            
+               
+          <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp" >
 
                 <TextView
-                    android:id="@+id/textView4"
-                    android:layout_width="wrap_content"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/user_user_phone" />
+                    android:gravity="center"
+                    android:text="@string/user_user_phone"
+                    android:textColor="@color/black"
+                    android:textSize="14dp" />
 
                 <EditText
                     android:id="@+id/user_user_phone_text"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="number" />
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_sel"
+                    android:hint="手机号码"
+                    android:paddingLeft="20dp"
+                    android:textSize="14dp" />
 
             </LinearLayout>
-
+            
+          
+          
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp" >
 
                 <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/user_user_email" />
+                    android:gravity="center"
+                    android:text="@string/user_user_email"
+                    android:textColor="@color/black"
+                    android:textSize="14dp" />
 
                 <EditText
                     android:id="@+id/user_user_email_text"
                     android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_sel"
+                    android:hint="邮箱"
+                    android:paddingLeft="20dp"
+                    android:textSize="14dp" />
+
+            </LinearLayout>
+            
+           <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp" >
+
+                <TextView
+                    android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="textEmailAddress" />
+                    android:gravity="center"
+                    android:text="@string/user_user_addr"
+                    android:textColor="@color/black"
+                    android:textSize="14dp" />
+
+                <EditText
+                    android:id="@+id/user_user_addr_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/edittext_sel"
+                    android:hint="常用地址"
+                    android:paddingLeft="20dp"
+                    android:textSize="14dp" />
 
             </LinearLayout>
 
@@ -125,25 +206,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical" >
-
-                <TextView
-                    android:id="@+id/textView6"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/user_user_addr" />
-
-                <EditText
-                    android:id="@+id/user_user_addr_text"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:inputType="textMultiLine" />
 
                 <Button
                     android:id="@+id/user_set_location_addr_btn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/location_addr" />
+                    android:layout_margin="20dp"
+                    android:background="@drawable/common_btn"
+                    android:padding="10dp"
+                    android:text="@string/location_addr"
+                    android:textColor="@color/white" />
 
             </LinearLayout>
 
