--- a/code/app/andriod/Laundry/res/layout/cart_list_item.xml
+++ b/code/app/andriod/Laundry/res/layout/cart_list_item.xml
@@ -18,7 +18,8 @@
                 android:layout_weight="0.8"
                 android:background="@color/grid_back_color"
                 android:gravity="center"
-                android:padding="8dp"
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp"
                 android:text="一堆衣服"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textColor="@color/black"
