--- a/code/app/andriod/Laundry/res/layout/order_confirm_item.xml
+++ b/code/app/andriod/Laundry/res/layout/order_confirm_item.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="match_parent"
-    android:background="@color/backcolor" >
+    android:background="@drawable/common_item" >
 
         <LinearLayout
             android:layout_width="match_parent"
