--- a/code/app/andriod/Laundry/res/layout/cart_list_item.xml
+++ b/code/app/andriod/Laundry/res/layout/cart_list_item.xml
@@ -41,20 +41,33 @@
                 android:textColor="@color/black"
                 android:textSize="12sp" />
 
-            <EditText
-                android:id="@+id/chart_list_item_quantity"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical" 
                 android:layout_marginBottom="0.5dp"
                 android:layout_marginRight="0.5dp"
                 android:layout_marginTop="0.5dp"
-                android:layout_weight="1"
-                android:background="@color/grid_back_color"
-                android:gravity="center"
-                android:padding="8dp"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@color/black"
-                android:textSize="12sp" />
+                android:background="@color/grid_back_color">
+
+                <EditText
+                    android:id="@+id/chart_list_item_quantity"
+                    android:layout_width="30dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+  
+                    android:background="@drawable/edittext_sel"
+                    android:gravity="center"
+                    android:padding="8dp"
+                    android:focusable="false"
+                    android:textColor="@color/black"
+                    android:textSize="12sp" >
+
+                    <requestFocus />
+                </EditText>
+
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/chart_list_item_tatol_price"
