--- a/code/app/andriod/Laundry/res/layout/cart_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/cart_fragment.xml
@@ -7,6 +7,7 @@
         android:id="@+id/linearLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/bottom1"
         android:layout_alignParentTop="true"
         android:orientation="vertical" >
 
