--- a/code/app/andriod/Laundry/res/layout/misp_tilte_with_save_layout.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_tilte_with_save_layout.xml
@@ -5,46 +5,65 @@
     android:background="@color/backcolor"
     android:orientation="vertical" >
 
-<RelativeLayout
+    <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="@dimen/tabbar_height"
-    android:background="@color/themecolor" >
+    android:background="@color/themecolor"
+        android:gravity="center" >
 
-    <Button
-        android:id="@+id/misp_title_back"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_centerVertical="true"
-        android:background="@null"
-        android:drawableLeft="@drawable/detail_back"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:text="@string/misp_back"
-        android:textColor="@color/theme_text_color"
-        android:textSize="@dimen/top_head_btn_size" />
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/misp_title_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-        android:textColor="@color/theme_text_color"
-        android:textSize="@dimen/top_head_title_font_size" />
+            <Button
+                android:id="@+id/misp_title_back"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/misp_tilte_btn_selector"
+                android:drawableLeft="@drawable/detail_back"
+                android:paddingLeft="10dp"
+                android:text="@string/misp_back"
+                android:textColor="@color/theme_text_color"
+                android:textSize="@dimen/top_head_btn_size" />
+        </LinearLayout>
 
-    <Button
-        android:id="@+id/misp_title_save"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:background="@null"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:text="@string/misp_save"
-        android:textColor="@color/theme_text_color"
-        android:textSize="@dimen/top_head_btn_size" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical" >
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/misp_title_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/theme_text_color"
+                android:textSize="@dimen/top_head_title_font_size" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:orientation="vertical" >
+
+            <Button
+                android:id="@+id/misp_title_save"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/misp_tilte_btn_selector"
+                android:gravity="center_vertical|center_horizontal"
+                
+                android:text="@string/misp_save"
+                android:textColor="@color/theme_text_color"
+                android:textSize="@dimen/top_head_btn_size" />
+        </LinearLayout>
+
+    </RelativeLayout>
+
  
 </LinearLayout>
