--- a/code/app/andriod/Laundry/res/layout/user_fragment.xml
+++ b/code/app/andriod/Laundry/res/layout/user_fragment.xml
@@ -149,10 +149,10 @@
             <Button
                 android:id="@+id/user_to_order"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_marginBottom="1dp"
                 android:layout_marginTop="1dp"
-                android:background="@color/white"
+                android:background="@drawable/common_item"
                 android:drawableLeft="@drawable/icon_cloth"
                 android:drawablePadding="10dp"
                 android:drawableRight="@drawable/forward_sm"
@@ -166,9 +166,9 @@
             <Button
                 android:id="@+id/user_to_user_info"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_marginBottom="1dp"
-                android:background="@color/white"
+                android:background="@drawable/common_item"
                 android:drawableLeft="@drawable/icon_user"
                 android:drawablePadding="10dp"
                 android:drawableRight="@drawable/forward_sm"
@@ -182,9 +182,9 @@
             <Button
                 android:id="@+id/user_btn_logout"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_marginBottom="1dp"
-                android:background="@color/white"
+                android:background="@drawable/common_item"
                 android:drawableLeft="@drawable/icon_exit"
                 android:drawablePadding="10dp"
                 android:drawableRight="@drawable/forward_sm"
