--- a/code/app/andriod/Laundry/res/layout/home_goods_sel.xml
+++ b/code/app/andriod/Laundry/res/layout/home_goods_sel.xml
@@ -4,72 +4,10 @@
     android:layout_height="match_parent"
     android:background="@color/backcolor"
     android:orientation="vertical" >
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/tabbar_height"
-    android:background="@color/themecolor"
-    android:orientation="horizontal"
-    android:paddingLeft="@dimen/title_margin" >
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:orientation="vertical" >
-
-            <Button
-                android:id="@+id/misp_title_back"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:background="@null"
-                android:drawableLeft="@drawable/detail_back"
-                android:text="@string/misp_back"
-                android:textColor="@color/theme_text_color"
-                android:textSize="@dimen/top_head_btn_size" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="2.5"
-            android:orientation="vertical" >
-
-                    <TextView
-                        android:id="@+id/misp_title_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:padding="@dimen/list_item_margin"
-                        android:text=""
-                        android:textColor="@color/theme_text_color"
-                        android:textSize="@dimen/top_head_title_font_size" />
-
-         </LinearLayout>     
-
-       <LinearLayout
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_gravity="center"
-           android:layout_weight="1"
-           android:gravity="center"
-           android:orientation="vertical" >
- 
-            <Button
-                android:id="@+id/misp_title_save"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:background="@null" 
-                android:text="@string/misp_type"
-                android:textColor="@color/theme_text_color"
-                android:textSize="@dimen/top_head_btn_size"
-              />
-
-        </LinearLayout>   
-    </LinearLayout>
-   
+       <include
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/misp_tilte_with_back_layout" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
