--- a/code/app/andriod/Laundry/res/drawable-hdpi/btn_normal.xml
+++ b/code/app/andriod/Laundry/res/drawable-hdpi/btn_normal.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
       <item>  
       <shape android:shape="rectangle">   
-         <solid android:color="@color/themecolor" />  
+         <solid android:color="@color/blue_light" />  
          <corners  
             android:topLeftRadius="5dip"  
             android:topRightRadius="5dip"  
