--- a/code/app/andriod/Laundry/res/layout/common_back_button.xml
+++ b/code/app/andriod/Laundry/res/layout/common_back_button.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
- 
- 
-
-            <Button xmlns:android="http://schemas.android.com/apk/res/android"
+             <Button xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/back_button"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
@@ -13,5 +10,6 @@
                 android:focusableInTouchMode="true"
                 android:text="返回"
                 android:textColor="@color/white"
-                android:textSize="20sp" />
+                android:textSize="@dimen/content_font_size_sm" />
+
  
