--- a/code/app/andriod/Laundry/res/layout/misp_list_item_btntype.xml
+++ b/code/app/andriod/Laundry/res/layout/misp_list_item_btntype.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/backcolor"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="1dp"
+    android:background="@drawable/common_item"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_gravity="center_vertical"
-        android:layout_marginBottom="1dp"
-        android:background="@color/white" >
+        android:layout_marginBottom="1dp" >
 
         <TextView
             android:id="@+id/item_btntype_name"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
-            android:textColor="@color/black" />
+            android:gravity="center"
+            android:textColor="@color/blue_light"
+            android:textSize="@dimen/content_font_size" />
 
         <LinearLayout
             android:layout_width="wrap_content"
