--- a/code/app/andriod/Laundry/res/layout/order_info_edit.xml
+++ b/code/app/andriod/Laundry/res/layout/order_info_edit.xml
@@ -24,7 +24,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                android:padding="20dp" >
                 
                 <TextView
                     android:id="@+id/textVew2"
@@ -40,14 +41,17 @@
                     android:id="@+id/order_pay_option_text"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/item_height_size"
-                    android:ems="10" />
+                    android:layout_marginLeft="@dimen/list_item_margin"
+                    android:ems="10"
+                    android:textSize="@dimen/content_font_size_sm" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                android:padding="20dp" >
 
                 <TextView
                     android:id="@+id/textView4"
@@ -63,11 +67,12 @@
 		        <EditText
 		            android:id="@+id/order_note_text"
 		            android:layout_width="match_parent"
-		            android:layout_marginLeft="10dp"
 		            android:layout_height="wrap_content"
+		            android:layout_marginLeft="10dp"
 		            android:lines="5"
 		            android:text=""
-		            android:textColor="@color/content_text_color" />
+		            android:textColor="@color/content_text_color"
+		            android:textSize="@dimen/content_font_size_sm" />
  
             </LinearLayout>
 
