--- a/code/app/andriod/Laundry/res/layout/user_login.xml
+++ b/code/app/andriod/Laundry/res/layout/user_login.xml
@@ -153,7 +153,7 @@
             android:background="@drawable/common_btn"
             android:text="登  录"
             android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textSize="@dimen/content_font_size" />
     </RelativeLayout>
 
 </LinearLayout>
